--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -197,6 +197,7 @@
   border-radius: var(--radius);
   box-shadow: 0 1px 2px rgb(0 0 0 / 5%);
   box-sizing: border-box;
+  color: #000000;
   display: block;
   font-size: var(--font-size-sm);
   font-weight: var(--font-weight-medium);
