changed company tp store name and added school name to email template

--- a/src/services/templates/email_template.html
+++ b/src/services/templates/email_template.html
@@ -10,7 +10,8 @@
       <p>Please process the following order for the retail location.</p>
       <!-- STORE INFO -->
       <div style="font-size: 14px; padding-bottom: 8px; border-bottom: 2px solid #1e3a8a; margin-bottom: 16px;">
-        <strong>Company:</strong> {{company}} &nbsp;|&nbsp;
+        {{#school_name}}<strong>School:</strong> {{school_name}} &nbsp;|&nbsp;{{/school_name}}
+        <strong>Store Name:</strong> {{company}} &nbsp;|&nbsp;
         <strong>Store #:</strong> {{store_number}} &nbsp;|&nbsp;
         <strong>Manager:</strong> {{manager_name}} &nbsp;|&nbsp;
         <strong>Date:</strong> {{date}}
